--- a/AstTray/Changelog.txt
+++ b/AstTray/Changelog.txt
@@ -1,5 +1,10 @@
 AstTray Development Change Log. For complete source, check-in history, issue tracker
-and documentation, visit: http://asttray.codeplex.com/
+and documentation, visit: https://github.com/skrusty/asttray
+
+Skrusty		23/11/2014
+	Added	AsterNET via nuget package (1.0.0)
+	Clean	Cleaned up code a little
+	Fixed	Fixed refernces for AsterNET and not Asterisk.NET
 
 Skrusty		11/06/2013
 	Added	Support for AMI 1.0, Asterisk 1.4
