--- a/AstTray/Changelog.txt
+++ b/AstTray/Changelog.txt
@@ -7,6 +7,7 @@ Skrusty		07/01/2016
 	Change	Moved click to call to main UI
 	Change	Updated config example to include default context and removed Url's that caused errors
 	Fixed	Usage of ConnectedLineNumber etc that caused crash on originate and inbound call
+	Fixed	Location of issue tracker (moved to github)
 
 Skrusty		23/11/2014
 	Added	AsterNET via nuget package (1.0.0)
